--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "axios": "^0.21.1",
+    "cypress": "^10.11.0",
     "typescript": "^4.3.5"
   }
 }
